# lang-Graph-chain-deepagents-learning

CASE-LangChain/Demo-01/: .gitignore  (+1 more)
CASE-LangChain/Demo-01/myagent0/: CLAUDE.md  pyproject.toml
CASE-LangChain/Demo-01/myagent0/requirments/: SPEC.md
CASE-LangChain/Demo-01/myagent1/: CLAUDE.md  check_tests.py  debug_test.py  discover_tests.py  full_test_runner.py  pyproject.toml  run_coverage.py  run_final_tests.py  run_pytest_capture.py  run_pytest_direct.py  run_pytest_verbose.py  run_tests.py  run_tests_and_capture.py  test_flow.py  test_run_log.txt  verify_tests.py
CASE-LangChain/Demo-01/myagent1/my-project01/: PLANNING.md  STATUS.md  workflow.md
CASE-LangChain/Demo-01/myagent1/templates/: agent.md.template  workflow.md.template
CASE-LangChain/Demo-01/myagent1/test-project/: PLANNING.md  agent.md
CASE-LangChain/Demo-01/myagent1/tests/: __init__.py  conftest.py  test_agent_registry.py  test_agent_router.py  test_cli_main.py  test_config.py  test_deep_integration.py  test_hitl.py  test_models.py  test_planning_doc_generator.py  test_progress_tracker.py  test_quality.py  test_task_runner.py  test_vcs.py  test_workflow_dag.py  test_workflow_parser.py
CASE-LangChain/Demo-01/pythonProject/: HelloDeepAgents01.py  instructs.txt  pyproject.toml  quick_start.py  quick_start2.py  simple_hello_world.py  test.py
CASE-LangChain/Demo-01/pythonProject/deepagents/: __init__.py  cli.py
CASE-LangChain/Demo-01/pythonProject/docs/: ARCHITECTURE.md  README.md
CASE-LangChain/Demo-01/pythonProject/myagent/: cli.py
CASE-LangChain/Demo-01/pythonProject/quick/: hello.py  quick_start3.py
CASE-LangChain/Demo-01/pythonProject/requirments/: README.md  SPEC.md
(+119 files in other folders)
